# mondey

./: .gitignore  .pre-commit-config.yaml  .sonarcloud.properties  ALGORITHMS.md  DEPLOYMENT.md  DEVELOPMENT.md  README.md  biome.json  codecov.yml  default.cert  docker-compose.dev.yml  docker-compose.localdatabases.yml  docker-compose.yml  map_children_milestones_data.py  openapi.json  package.json
mondey_backend/: .env.dev.sample  .env.prod.sample  .env.sample  Dockerfile  README.md  docker-compose.localdatabases.yml  migration_add_unknown_suspicious_state.sql  migration_add_visibility_to_both_questions_tables.sql  openapi.json  pyproject.toml
mondey_backend/alembic/: README.md  env.py  script.py.mako
mondey_backend/alembic/versions/: 05e995d24ed9_add_calendarevent_table.py  20260715_01_add_access_token_last_seen.py  20260717_01_add_milestone_age_curve.py  20260717_02_add_answer_session_statistics_index.py
mondey_backend/importData/: insert_milestones_into_database.py  map_children_milestones_data.py
mondey_backend/importData/tests/: import_test_fixtures.py  test_milestones_assigned_to_children.py  test_milestones_imported_correctly.py
mondey_backend/import_data/: insert_milestones_into_database.py  utils.py
mondey_backend/migrations/: add_admin_settings_for_configurable_feedback.sql  add_importance_of_milestone.sql  age_delta_to_relevant_age_min_max.sql
mondey_backend/src/mondey_backend/: dependencies.py  export.py  (+11 more)
mondey_backend/tests/: conftest.py  test_auth_session.py  test_mondey_migration.py  test_session_strategy.py  test_users_migration.py
(+349 files in other folders)
