[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mondey_backend"
description = "MONDEY backend"
readme = "README.md"
license = { text = "NONE" }
authors = [{ name = "SSC", email = "ssc@iwr.uni-heidelberg.de" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]",
    "fastapi-users[sqlalchemy]",
    "numpy",
    "uvicorn",
    "sqlmodel",
    "aiosqlite",
    "python-multipart",
    "pydantic-settings",
    "types-python-dateutil",
    "click",
    "pillow",
    "webp",
    "python-dateutil",
    "checkdigit",
    "apscheduler",
    "fastapi-injectable",
    "deepl",
    "pandas",
    "sqlparse",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest", "pytest-randomly", "pytest-cov", "pytest-mock", "pytest-asyncio"]

[project.scripts]
mondey-backend = "mondey_backend.main:main"
mondey-export-openapi-json = "mondey_backend.export:export_openapi_json"

[tool.hatch.version]
path = "src/mondey_backend/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # numpy 2.0 support
    "NPY201",
]
ignore = ["E501"]

[tool.ruff.lint.isort]
force-single-line = true
